yamls/flask-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: monitoring-app
spec:
  selector:
    app: flask-app
  ports:
    - port: 80
      targetPort: 5000
