yamls/mongodb-single.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: monitoring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:4
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: monitoring-app
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
