yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress  
  namespace: monitoring-app   
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: monitor-ortuser.ort.tamnun.inc  # Host for which the Ingress should route traffic
    http:
      paths:
      - path: /                       # Path for routing traffic
        pathType: Prefix              # Type of path matching
        backend:
          service:
            name: flask-app-service     # Service to route traffic to
            port:
              number: 80            # Port on the service to forward traffic to
